DONE/go-makezero/work/.buildlink/gopkg/src/golang.org/x/tools/internal/lsp/testdata/good/good1.go
/usr/pkg/gopkg/src/golang.org/x/tools/internal/lsp/testdata/good/good1.go