DONE/go-makezero/work/.buildlink/gopkg/src/golang.org/x/tools/internal/lsp/testdata/typeerrors/noresultvalues.go
/usr/pkg/gopkg/src/golang.org/x/tools/internal/lsp/testdata/typeerrors/noresultvalues.go